--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,10 +11,7 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/andrew/Documents/BUT2A/SymfonyTest/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/andrew/Documents/BUT2A/SymfonyTest/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+
+    <p> {% trans %} Welcome ! Your message is  {% endtrans %} :  {{ message }} </p>
 </div>
 {% endblock %}
